// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tomo interface add 1`] = `
"
 [36mAdd automated [1maccessibility[22m testing[39m

 [1m[36m→[39m[22m [1m[36ma11y[39m[22m
   [37mbabel[39m
   [37mbrowsersync[39m
   [37mcypress[39m
   [37melectron[39m
   [37mesdoc[39m
   [37meslint[39m
   [37mjest[39m
   [37mmakefile[39m
   [37mmarionette[39m
   [37mparcel[39m
   [37mpostcss[39m
   [37mreact[39m
   [37mreason[39m
   [37mrollup[39m
   [37mwebpack[39m
"
`;

exports[`tomo interface add 2`] = `
"
 [36mAdd automated [1maccessibility[22m testing[39m

 [1m[36m→[39m[22m [1m[36ma11y[39m[22m
   [37mbabel[39m
   [37mbrowsersync[39m
   [37mcypress[39m
   [37melectron[39m
   [37mesdoc[39m
   [37meslint[39m
   [37mjest[39m
   [37mmakefile[39m
   [37mmarionette[39m
   [37mparcel[39m
   [37mpostcss[39m
   [37mreact[39m
   [37mreason[39m
   [37mrollup[39m
   [37mwebpack[39m
"
`;

exports[`tomo interface remove 1`] = `
"
 [1m[33mCAUTION:[39m[22m tomo shall [1m[31mremove[39m[22m that which tomo would have [1m[32madded[39m[22m
 [1m[36m→[39m[22m [1m[36ma11y[39m[22m
   [37mbrowsersync[39m
   [37mcypress[39m
   [37mparcel[39m
   [37mpostcss[39m
   [37mreason[39m
   [37mrollup[39m
   [37mwebpack[39m
"
`;

exports[`tomo interface remove 2`] = `
"
 [1m[33mCAUTION:[39m[22m tomo shall [1m[31mremove[39m[22m that which tomo would have [1m[32madded[39m[22m
 [1m[36m→[39m[22m [1m[36ma11y[39m[22m
   [37mbrowsersync[39m
   [37mcypress[39m
   [37mparcel[39m
   [37mpostcss[39m
   [37mreason[39m
   [37mrollup[39m
   [37mwebpack[39m
"
`;
